<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/module_setupview_TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/moduleSetup_generateLabel"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/module_setupview_assCountEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/val_10"
                android:inputType="numberSigned"
                android:maxLength="2"
                android:maxLines="1" >

                <requestFocus />
            </EditText>

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/moduleSetup_assignmentsLabel"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/moduleSetup_eachWorthLabel"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/module_setupview_assWeightEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/val_3"
                android:inputType="numberSigned"
                android:maxLength="3"
                android:maxLines="1" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/percentSymbol"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/module_detailsview_weighterrorTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/moduleSetup_labelledLabel"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/module_setupview_assLabelEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/moduleSetup_assignmentNameHint"
                android:maxLines="1" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/digits_2"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>
    
</LinearLayout>
