<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/course_setupview_codeTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/codeStr"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/course_setupview_codeEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/courseCodeHint"
                android:inputType="text"
                android:maxLines="1" />

        </LinearLayout>
    
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	        android:background="#6E82F5" >
	
	                <TextView
	                    android:id="@+id/course_setupview_titleTextView"
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:textAppearance="?android:attr/textAppearanceSmall" />
	
	                <EditText
	                    android:id="@+id/course_setupview_titleEditText"
	                    android:layout_width="0dp"
	                    android:layout_height="wrap_content"
	                    android:layout_weight="1"
	                    android:ems="10"
	                    android:hint="@string/courseTitleHint"
	                    android:inputType="text" />
	
	    </LinearLayout>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/course_setupview_durationTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/durationStr"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/course_setupview_durationEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/courseDurationHint"
                android:inputType="number"
                android:maxLength="2"
                android:maxLines="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/course_setupview_semestersTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/semestersStr"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/course_setupview_semestersEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/courseSemestersHint"
                android:inputType="numberSigned"
                android:maxLength="1"
                android:maxLines="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/course_setupview_nameTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/yourNameStr"
                android:textAppearance="?android:attr/textAppearanceLarge" />

           	<EditText
           	    android:id="@+id/course_setupview_nameEditText"
           	    android:layout_width="0dp"
           	    android:layout_height="wrap_content"
           	    android:layout_weight="1"
           	    android:ems="10"
           	    android:hint="@string/developerName"
           	    android:inputType="textPersonName"
           	    android:maxLines="1" >

            </EditText>
        </LinearLayout>

        <Button
            android:id="@+id/course_setupview_saveButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_save" />

    </LinearLayout>
    

</ScrollView>
