<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/module_setupview_marksTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/modulesSetup_marksForFinalLabel"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/module_setupview_finalMarksEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/val_75"
                android:inputType="numberSigned"
                android:maxLength="3"
                android:maxLines="1" >
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/module_setupview_examQsTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/moduleSetup_qsOnPaperLabel"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/module_setupview_examQsEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/val_3"
                android:inputType="numberSigned"
                android:maxLength="3"
                android:maxLines="1" >
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/module_setupview_examTimeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/moduleSetup_timeInExamLabel"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/module_setupview_examTimeEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/val_120"
                android:inputType="numberSigned"
                android:maxLength="3"
                android:maxLines="1" >
            </EditText>
        </LinearLayout>
    
</LinearLayout>
