<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/module_setupview_codeTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/codeStr"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/module_setupview_codeEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/moduleSetup_codeHint"
                android:imeOptions="flagNoExtractUi"
		        android:selectAllOnFocus="true"
        		android:singleLine="true"
                android:inputType="text" >

            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/module_setupview_titleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/titleStr"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/module_setupview_titleEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/moduleSetup_titleHint"
                android:imeOptions="flagNoExtractUi"
		        android:selectAllOnFocus="true"
        		android:singleLine="true" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/module_setupview_minTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/moduleSetup_minPassLabel"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/module_setupview_minEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="numberDecimal"
                android:maxLength="3"
                android:maxLines="1"
                android:imeOptions="flagNoExtractUi"
		        android:selectAllOnFocus="true"
        		android:singleLine="true"
                android:text="@string/moduleSetup_minPassValue" >
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/module_setupview_goalTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/moduleSetup_goalLabel"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/module_setupview_goalEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/moduleSetup_goalHint"
                android:inputType="numberDecimal"
                android:maxLength="3"
                android:maxLines="1"
                android:imeOptions="flagNoExtractUi"
		        android:selectAllOnFocus="true"
        		android:singleLine="true" >
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/module_setupview_finalTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/moduleSetup_finalExamLabel"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/module_setupview_finalEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/moduleSetup_finalExamHint"
                android:inputType="numberDecimal"
                android:maxLength="3"
                android:maxLines="1"
                android:imeOptions="flagNoExtractUi"
		        android:selectAllOnFocus="true"
        		android:singleLine="true" >
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/module_setupview_caTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/moduleSetup_caLabel"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/module_setupview_caEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:imeOptions="flagNoExtractUi"
                android:inputType="none"
                android:maxLength="3"
                android:maxLines="1"
                android:selectAllOnFocus="true"
                android:singleLine="true" >

            </EditText>
        </LinearLayout>

        <TextView
            android:id="@+id/textView_bar1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#6E82F5"
            android:clickable="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:height="1dp"
            android:longClickable="false"
            android:maxLines="1" />
        
        <TextView
            android:id="@+id/module_setupview_semestersTextView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/moduleSetup_spreadSemestersLabel"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <CheckBox
                android:id="@+id/module_setupview_sem1checkbox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/semester1" />

            <CheckBox
                android:id="@+id/module_setupview_sem2checkbox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/semester2" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView_bar2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#6E82F5"
            android:clickable="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:height="1dp"
            android:longClickable="false"
            android:maxLines="1" />
        

        <TextView
            android:id="@+id/textView_bar3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#6E82F5"
            android:clickable="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:height="1dp"
            android:longClickable="false"
            android:maxLines="1" />

    </LinearLayout>

</ScrollView>